--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "homepage": "https://github.com/Xer0bit/Superior-Univerity-Library-Ai",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
@@ -22,4 +21,10 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
+
+  
 }
+
+
+
+
